# OpenCV-Research

./: .gitignore  .gitmodules  CMakeLists.txt  OpenCV-CUDA.md  README.md  c.sh  cmdargs  cmdargs.cpp  vcpkg.json  vcpkg.json.old  version.hpp.in
include/: drawoverlay.hpp  facedetection.hpp  imageoverlay.hpp  textoverlay.hpp
samples/: CMakeLists.txt  alpha_comp.cpp  cuda-2ximg.cpp  cuda-check.cpp  cuda-opengl.cpp.old  cuda-trackbar-opengl.cpp  cuda-trackbar.cpp  draw-progressbar.cpp  draw-shapes.cpp  segment-objects.cpp
src/: CMakeLists.txt  drawoverlay.cpp  facedetection.cpp  imageoverlay.cpp  main.cpp  textoverlay.cpp
