cmake_minimum_required(VERSION 3.9)

## vcpkg
SET(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake")

# specify the C++ standard
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)

### Project Metadata
set(OPENCV_RESEARCH_PROJECT_NAME        "opencvr")
set(OPENCV_RESEARCH_PROJECT_DESCRIPTION "Research on OpenCV features")
set(OPENCV_RESEARCH_AUTHOR_DOMAIN       "https://www.sukesh.me")
set(OPENCV_RESEARCH_VERSION_MAJOR       "0")
set(OPENCV_RESEARCH_VERSION_MINOR       "0")
set(OPENCV_RESEARCH_VERSION_PATCH       "1")
set(OPENCV_RESEARCH_VERSION             "${OPENCV_RESEARCH_VERSION_MAJOR}.${OPENCV_RESEARCH_VERSION_MINOR}.${OPENCV_RESEARCH_VERSION_PATCH}")
set(OPENCV_RESEARCH_NAME_VERSION        "${OPENCV_RESEARCH_PROJECT_NAME} v${OPENCV_RESEARCH_VERSION} (${OPENCV_RESEARCH_VERSION_REVISION})")

### Declare Project
project(${OPENCV_RESEARCH_PROJECT_NAME})

set(OPENCV_RESEARCH_SRC_DIR ${PROJECT_SOURCE_DIR}/src)
set(OPENCV_RESEARCH_INC_DIR ${PROJECT_SOURCE_DIR}/include)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(src)

configure_file(
        "${PROJECT_SOURCE_DIR}/version.hpp.in"
        "${PROJECT_BINARY_DIR}/version.hpp")
