cmake_minimum_required(VERSION 3.9)

## vcpkg
#SET(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake")

# specify the C++ standard
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)

### Project Metadata
set(OPENCV_RESEARCH_PROJECT_NAME        "opencvr")
set(OPENCV_RESEARCH_PROJECT_DESCRIPTION "Research on OpenCV features")
set(OPENCV_RESEARCH_AUTHOR_DOMAIN       "https://www.sukesh.me")
set(OPENCV_RESEARCH_VERSION_MAJOR       "0")
set(OPENCV_RESEARCH_VERSION_MINOR       "0")
set(OPENCV_RESEARCH_VERSION_PATCH       "1")
set(OPENCV_RESEARCH_VERSION             "${OPENCV_RESEARCH_VERSION_MAJOR}.${OPENCV_RESEARCH_VERSION_MINOR}.${OPENCV_RESEARCH_VERSION_PATCH}")
set(OPENCV_RESEARCH_NAME_VERSION        "${OPENCV_RESEARCH_PROJECT_NAME} v${OPENCV_RESEARCH_VERSION} (${OPENCV_RESEARCH_VERSION_REVISION})")

ADD_DEFINITIONS ("-Wall -Wextra -Werror -Wno-unused-parameter -Wno-dev")

### Declare Project
project(${OPENCV_RESEARCH_PROJECT_NAME})

set(OPENCV_RESEARCH_SRC_DIR ${PROJECT_SOURCE_DIR}/src)
set(OPENCV_RESEARCH_INC_DIR ${PROJECT_SOURCE_DIR}/include)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(src)
add_subdirectory(samples)

configure_file(
        "${PROJECT_SOURCE_DIR}/version.hpp.in"
        "${PROJECT_BINARY_DIR}/version.hpp")

# create .deb and source tarballs
SET (CPACK_PACKAGE_VENDOR		"Sukesh Ashok Kumar")
SET (CPACK_PACKAGE_CONTACT		"sukesh@live.com")
SET (CPACK_PACKAGE_NAME			"${OPENCV_RESEARCH_PROJECT_NAME}")
SET (CPACK_PACKAGE_VERSION		"0.0.1")
SET (CPACK_PACKAGE_VERSION_MAJOR	"${OPENCV_RESEARCH_VERSION_MAJOR}")
SET (CPACK_PACKAGE_VERSION_MINOR	"0")
SET (CPACK_PACKAGE_VERSION_PATCH	"1")
SET (CPACK_PACKAGE_DESCRIPTION_SUMMARY	"${OPENCV_RESEARCH_PROJECT_DESCRIPTION}")
SET (CPACK_PACKAGE_DESCRIPTION		"${OPENCV_RESEARCH_PROJECT_DESCRIPTION}")
SET (CPACK_PACKAGE_HOMEPAGE_URL		"https://www.sukesh.me/")
SET (CPACK_GENERATOR			"DEB")
SET (CPACK_SOURCE_IGNORE_FILES		".svn" ".kdev4" "build/" "build_and_upload" ".vscode")
SET (CPACK_SOURCE_GENERATOR		"TGZ;ZIP")
INCLUDE( CPack )